--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "webpack-merge": "^5.0.9"
   },
   "dependencies": {
-    "regenerator-runtime": "^0.13.5"
+    "regenerator-runtime": "^0.13.5",
+    "serviceworker-webpack-plugin": "^1.0.1"
   },
   "bugs": {
     "url": "https://github.com/yohanesyuda/Batik/issues"
