--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start-dev": "webpack serve --config webpack.dev.js",
-    "build": "webpack --config webpack.prod.js"
+    "build": "webpack --config webpack.prod.js",
+    "build-image": "node sharp.js"
   },
   "repository": {
     "type": "git",
@@ -22,6 +23,8 @@
     "eslint": "^7.3.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.3.0",
+    "imagemin-webp-webpack-plugin": "^3.3.6",
+    "sharp": "^0.30.6",
     "style-loader": "^1.2.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^4.9.2",
